# ITMO-AVITO-Team7

./: .gitignore  CMakeLists.txt  README.md
Interface/: file_system.hpp  summary.md
ML-Model/: BestParamsSearcher.py  Interface.py  ML_interace.py  ModelLearner.py  best_params.json  results.csv  ПромежуточныйОтчет.txt
benchmark/: BenchmarkRunner.cpp  BenchmarkRunner.hpp  CsvWriter.cpp  CsvWriter.hpp  Operations.hpp  WorkloadConfig.hpp  WorkloadGenerator.cpp  WorkloadGenerator.hpp  main.cpp
case_A/: case_a.cpp  case_a.hpp  summary.md
case_B/: case_b.cpp  case_b.hpp
case_C/: case_c.cpp  case_c.hpp
recommender/: README.md  pipeline.py  predict.py  recommend.py  requirements.txt  strategies.py
report/: all copy 2.typ  all.typ
tests/: CMakeLists.txt
tests/benchmark/: fake_file_system.hpp  test_benchmark_runner.cpp  test_csv_writer.cpp  test_workload_config.cpp  test_workload_generator.cpp
tests/fs_core/: test_crud_operations.cpp  test_edge_cases.cpp  test_metrics_tracking.cpp  test_system_state.cpp  test_tree_structure.cpp
tests/recommender/: fixtures.py  test_predict.py  test_recommend_cli.py  test_strategies.py
utils/: memory_pool.hpp  path_utils.hpp
